--- a/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
+++ b/src/app/sistema/rh/cadastrar-colaborador/cadastrar-colaborador.component.html
@@ -130,7 +130,7 @@
               class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
               placeholder="Necessidade especial" FormControlName="pcd">
               <option value="" disabled selected>Pessoa com deficiência?</option>
-              <option value="P">P</option>
+              <option value="Sim">Sim</option>
               <option value="Não">Não</option>
             </select>
           </div>
