--- a/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
@@ -92,8 +92,7 @@
 
           <!-- CNH -->
           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-            <input formControlName="cnh" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"
-              type="text" placeholder="CNH">
+            <input maxlength="11" formControlName="cnh" class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm"  type="text" placeholder="CNH">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNH</label>
           </div>
 
