--- a/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
@@ -7,7 +7,7 @@
 <div class="modal fade" id="adicionarFornecedor" tabindex="-1" aria-labelledby="adicionarFornecedorLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-xl">
-    <form>
+    <form [formGroup]="fornecedorForm">
       <!-- Modal content -->
       <div class="modal-content rounded-15 bg-custom-light">
         <div class="modal-header px-4">
@@ -25,7 +25,7 @@
 
             <div class="col-12 d-grid px-2 pt-4 p-0 m-0 form-floating">
               <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark" type="text"
-                placeholder="Categoria">
+                placeholder="Categoria" formControlName="category">
                 <option value="" disabled selected>Selecione uma Categoria</option>
                 <option value="categoria1">Categoria 1</option>
                 <option value="categoria2">Categoria 2</option>
@@ -47,28 +47,29 @@
 
             <!-- CNPJ -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CNPJ">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="CNPJ" formControlName="cnpj"  mask="00.000.000/0000-00">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">CNPJ</label>
             </div>
 
             <!-- Nome fantasia -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                placeholder="Nome fantasia">
+                placeholder="Nome fantasia" formControlName="fantasy_name">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome fantasia</label>
             </div>
 
             <!-- Razão Social -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                placeholder="Razão Social">
+                placeholder="Razão Social" formControlName="social_reason">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Razão Social</label>
             </div>
 
             <!-- Código do regime tributário -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
               <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark"
-                placeholder="Código do regime tributário">
+                placeholder="Código do regime tributário" formControlName="tribute_code">
                 <option value="simples-nacional">Simples nacional | Regime normal</option>
                 <option value="simples-nacional">Simples nacional | Regime normal</option>
                 <option value="simples-nacional ">Simples nacional | Regime normal</option>
@@ -79,7 +80,7 @@
             <!-- Contribuinte -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
               <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark"
-                placeholder="Contribuinte">
+                placeholder="Contribuinte" formControlName="contribuinte">
                 <option value="simples-nacional">Simples nacional | Regime normal</option>
                 <option value="simples-nacional">Simples nacional | Regime normal</option>
                 <option value="simples-nacional ">Simples nacional | Regime normal</option>
@@ -89,15 +90,15 @@
 
             <!-- Inscrição estadual -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                placeholder="Inscrição estadual">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="number"
+                placeholder="Inscrição estadual" formControlName="state_registration">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Inscrição estadual</label>
             </div>
 
             <!-- Insento -->
             <div class="col-2 px-2 pt-4 p-0 m-0 form-floating d-flex align-items-center">
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" value="insento" id="insento">
+                <input class="form-check-input" type="checkbox" value="insento" id="insento" formControlName="is_exempt">
                 <label class="form-check-label" for="insento">Insento</label>
               </div>
             </div>
@@ -105,13 +106,13 @@
             <!-- Inscrição municipal -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                placeholder="Inscrição municipal">
+                placeholder="Inscrição municipal" formControlName="municipal_registration">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Inscrição municipal</label>
             </div>
           </div>
 
           <!-- Endereço -->
-          <div class="row py-3 p-0 m-0">
+          <div class="row py-3 p-0 m-0" [formGroup]="a">
 
             <!-- Título -->
             <div class="col-12 px-2 m-0 p-0">
@@ -120,13 +121,14 @@
 
             <!-- CEP -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="CEP">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="CEP" formControlName="cep" mask="00000-000" (input)="loadCep($event.target)">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">CEP</label>
             </div>
 
             <!-- UF -->
             <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
-              <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark">
+              <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm text-custom-dark" formControlName="state">
                 <option value="AC">Acre</option>
                 <option value="AL">Alagoas</option>
                 <option value="AP">Amapá</option>
@@ -160,33 +162,36 @@
 
             <!-- Cidade -->
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Cidade">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" 
+                placeholder="Cidade" formControlName="city">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Cidade</label>
             </div>
 
             <!-- Bairro -->
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Bairro">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Bairro" formControlName="neighborhood">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Bairro</label>
             </div>
 
             <!-- Logradouro -->
             <div class="col-7 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                placeholder="Logradouro">
+                placeholder="Logradouro" formControlName="street">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Logradouro</label>
             </div>
 
             <!-- Número -->
             <div class="col-2 px-2 pt-4 p-0 m-0 form-floating">
-              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Número">
+              <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="number"
+                placeholder="Número" formControlName="number">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Número</label>
             </div>
 
             <!-- Complemento -->
             <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                placeholder="Complemento">
+                placeholder="Complemento" formControlName="complement">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Complemento</label>
             </div>
 
@@ -203,69 +208,73 @@
               </a>
             </div>
 
-            <div class="col-12 m-0 p-0">
-              <div class="row m-0 p-0 pb-4 border-bottom" *ngFor="let contato of contatos">
-
+            <div class="col-12 m-0 p-0"formArrayName="contacts" *ngFor="let contato of c.controls; index as i">
+              <div class="row m-0 p-0 pb-4 border-bottom" [formGroupName]="i">
                 <!-- Nome do contato -->
-                <div class="col-11 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                    placeholder="Nome do contato">
-                  <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome do contato</label>
+                <div class="col-12 d-flex px-2 align-items-center m-0 p-0">
+                  <div class="col-11 px-2 pt-4 p-0 m-0 form-floating">
+                    <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
+                      placeholder="Nome do contato" formControlName="name">
+                    <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome do contato</label>
+                  </div>
+                  <a class="px-2 py-2" (click)="removeContato(i)" *ngIf="c.controls.length > 1">
+                    <i class="bi bi-x-square-fill icon-view my-auto fs-4 p-2 m-0 fw-bold text-custom-dark"></i>
+                  </a>
                 </div>
-
+                
                 <!-- WhatsApp -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                   <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                    placeholder="WhatsApp">
+                    placeholder="WhatsApp" formControlName="whatsApp" mask="(00) 00000-0000">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">WhatsApp</label>
                 </div>
 
                 <!-- Telefone 1 -->
                 <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
                   <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                    placeholder="Telefone 1">
+                    placeholder="Telefone 1" formControlName="tel_1" mask="(00) 0000-0000">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Telefone 1</label>
                 </div>
 
                 <!-- Ramal 1 -->
                 <div class="col-1 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                    placeholder="Ramal 1">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="number"
+                    placeholder="Ramal 1" formControlName="ramal_1">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ramal 1</label>
                 </div>
 
                 <!-- Telefone 2 -->
                 <div class="col-3 px-2 pt-4 p-0 m-0 form-floating">
                   <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                    placeholder="Telefone 2">
+                    placeholder="Telefone 2" formControlName="tel_2" mask="(00) 0000-0000">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Telefone 2</label>
                 </div>
 
                 <!-- Ramal 2 -->
                 <div class="col-1 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                    placeholder="Ramal 2">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="number"
+                    placeholder="Ramal 2" formControlName="ramal_2">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Ramal 2</label>
                 </div>
 
                 <!-- Email do contato -->
                 <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
                   <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="email"
-                    placeholder="Email do contato">
+                    placeholder="Email do contato" formControlName="email">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email do contato</label>
                 </div>
 
                 <!-- Email nota fiscal -->
                 <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
                   <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="email"
-                    placeholder="Email nota fiscal">
+                    placeholder="Email nota fiscal" formControlName="email_nf">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email nota fiscal</label>
                 </div>
 
                 <!-- Site -->
                 <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
                   <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text"
-                    placeholder="Site">
+                    placeholder="Site" formControlName="site">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Site</label>
                 </div>
               </div>
@@ -305,21 +314,21 @@
             <!-- Data da primeira compra -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="date"
-                placeholder="Data da primeira compra">
+                placeholder="Data da primeira compra" formControlName="first_payment">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data da primeira compra</label>
             </div>
 
             <!-- Data da última compra -->
             <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
               <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="date"
-                placeholder="Data da última compra">
+                placeholder="Data da última compra" formControlName="last_payment">
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data da última compra</label>
             </div>
 
             <!-- Observações -->
             <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
               <textarea class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm" placeholder="Observações"
-                style="height: 150px"></textarea>
+                style="height: 150px" formControlName="notes"></textarea>
               <label class="ms-2 mt-3 small text-truncate text-custom-dark">Observações</label>
             </div>
 
@@ -340,7 +349,7 @@
 
           <!-- Salvar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
-            <button type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start">
+            <button type="submit" class="h-limited-sm btn rounded-15 py-1 px-4 bg-custom-success shadow-sm text-start" (click)="save()">
               <h5 class="fw-normal my-auto text-truncate text-custom-dark">Salvar</h5>
             </button>
           </div>
