--- a/src/app/sistema/rh/listar-colaboradores/listar-colaboradores.component.html
+++ b/src/app/sistema/rh/listar-colaboradores/listar-colaboradores.component.html
@@ -10,9 +10,13 @@
 
       <!-- Botão de voltar -->
       <div class="row m-0 justify-content-start mt-4">
-        <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/">
+        <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/rh/">
           <i class="bi-arrow-left fs-3 text-secondary"></i>
         </a>
+      </div>
+
+      <div class="col-12 text-center">
+        <h1 class="text-custom-dark text-truncate">Lista de colaboradores</h1>
       </div>
 
       <!-- Adicionar, Ativos e Inativos -->
