--- a/src/app/sistema/rh/relatorio/relatorio.component.html
+++ b/src/app/sistema/rh/relatorio/relatorio.component.html
@@ -23,17 +23,16 @@
                           <i class="bi bi-calendar icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark" cursor="pointer"></i>
                         </label>
                         <div class="col-11 px-2 p-0 m-0 position-relative">
-                          <input formControlName="data" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date"id="add-falta" name="add-falta">
+                          <input formControlName="data" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="date" id="add-falta" name="add-falta" (change)="dataFilter($event)" (keyup)="dataFilter($event)">
                         </div>
                     </div>
                     <div class="col row">
                         <div class="px-2 p-0 m-0 form-floating">
                           <select formControlName="cargo"
                           class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
-                          placeholder="Necessidade especial">
+                          placeholder="Necessidade especial" (change)="colabFilter($event)">
                           <option value="" disabled selected>Colaborador</option>
-                          <option value="Colaborador 1"> Colaborador 1</option>
-                          <option value="Colaborador 2">Colaborador 2</option>
+                          <option value="{{oneColab.colaborador}}" *ngFor="let oneColab of rh">{{oneColab.name}} {{oneColab.surname}}</option>
                           </select>
                           <label class="ms-2 small text-truncate text-custom-dark">Colaborador</label>
                         </div>
@@ -62,12 +61,12 @@
                             <td class="display-6 text-custom-dark border border-custom-dark border-1 text-center fw-bold">Tipo</td>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody *ngFor="let oneColab of colab">
                         <tr>
-                            <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">Colaborador</td>
-                            <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">Cargo</td>
-                            <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">Data</td>
-                            <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">Tipo</td>
+                            <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.colaborador}}</td>
+                            <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.cargo}}</td>
+                            <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.data.substring(10, 0)}}</td>
+                            <td class="lead text-custom-dark border border-custom-dark border-1 text-center fw-normal">{{oneColab.tipo}}</td>
                         </tr>
                     </tbody>
                 </table>
