--- a/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
+++ b/src/app/sistema/rh/editar-colaborador/editar-colaborador.component.html
@@ -50,7 +50,7 @@
         <h1 class="text-custom-dark text-truncate">{{ rhForm.value.name }}  {{ rhForm.value.surname }}</h1>
       </div>
 
-      <form [formGroup]="rhForm" (ngSubmit)="sendForm(rhForm.value)">
+      <form [formGroup]="rhForm" (ngSubmit)="sendForm(rhForm.value, rhForm)">
         <div *ngIf="estoqueSection == 'dados-pessoais'">
           <!-- Formulário -->
               <div class="row m-0 mt-4 justify-content-center border-bottom rh-form">
@@ -110,7 +110,7 @@
 
                 <!-- CPF ou CNPJ -->
                 <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
-                    <input [class.invalid]="cpf?.invalid && (cpf?.dirty || cpf?.touched)" mask="CPF_CNPJ" formControlName="cpf-cnpj"
+                    <input [class.invalid]="cpf?.invalid && (cpf?.dirty || cpf?.touched)" mask="CPF_CNPJ" formControlName="cpfcnpj"
                     class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
                     placeholder="CPF">
                     <label class="ms-2 mt-3 small text-truncate text-custom-dark">CPF/CNPJ</label>
@@ -423,7 +423,7 @@
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
                 <select formControlName="bankAccountType"
                 class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
-                placeholder="Necessidade especial">
+                placeholder="Conta">
                 <option value="" disabled selected>Tipo de conta</option>
                 <option value="poupança">Poupança</option>
                 <option value="corrente">Corrente</option>
@@ -462,6 +462,54 @@
                 class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
                 placeholder="Dupla Função" readonly>
                 <label class="ms-2 mt-3 small text-truncate text-custom-dark">Dupla Função</label>
+            </div>
+
+          <!-- Dias trabalhados -->
+           <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+            <input formControlName="workDays"
+              class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
+              placeholder="Dias trabalhados">
+            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Dias trabalhados</label>
+          </div>
+
+            <!-- Vale Transporte -->
+            <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+              <select formControlName="vale" #vt (change)="log(vt.value)"
+                class="form-select form-select-lg h-limited px-4 py-3 rounded-15 shadow-sm text-custom-dark" type="text"
+                placeholder="Vale Transporte" >
+                <option value="" disabled selected>Vale Transporte (VT)?</option>
+                <option value="sim">Sim</option>
+                <option value="nao">Não</option>
+              </select>
+            </div>
+
+            <!-- Valor da condução -->
+            <div *ngIf="vt.value === 'sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+              <input formControlName="conducaoIda"
+                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
+                placeholder="Valor da condução ida">
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor da condução(ida)</label>
+            </div>
+
+            <div *ngIf="vt.value === 'sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+              <input formControlName="conducaoVolta"
+                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
+                placeholder="Valor da condução volta">
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor da condução(volta)</label>
+            </div>
+
+            <div *ngIf="vt.value === 'sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+              <input formControlName="linesNames"
+                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="text"
+                placeholder="Nome das linhas de transporte">
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Nome das linhas de transporte</label>
+            </div>
+
+            <div *ngIf="vt.value === 'sim'" class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+              <input formControlName="totalValue"
+                class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="number"
+                placeholder="Valor total" readonly>
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark">Valor total</label>
             </div>
           </div>    
         </div>
